Default to treesitter adapter with health check and crash recovery
- Change default adapter from 'mock' to 'treesitter'
- Add MIN_JAVA_VERSION constant (23) to avoid hardcoded version strings
- Add healthCheck() to XtcCompilerAdapter interface
- Add xtc/healthCheck custom LSP method for client verification
- Fail-fast in TreeSitterAdapter if native library health check fails
- Add process monitor with crash notification and restart action
- Bundle libtree-sitter runtime for all platforms (Linux .so, Windows .dll)
- Update .gitignore to allow native libraries in tree-sitter resources
- Copy lsp-version.properties to plugin for version display
- Update PLAN_TREE_SITTER.md with current state and manual test plan